--- a/index.html
+++ b/index.html
@@ -16,7 +16,15 @@
 				<div class="logobase left"></div>	
 				<ul class="kek">
 					<li><a href="#">home</a></li>
-					<li><a href="#">recipe</a></li>
+					<li><a href="#">recipe</a>
+						<ul class="submenu shadow">
+							<li><a href="#"></a>recomended</li>
+							<li><a href="#"></a>popular</li>
+							<li><a href="#"></a>quick &amp; easy</li>
+							<li><a href="#"></a>healty</li>
+							<li><a href="#"></a>newest</li>
+						</ul>
+					</li>
 					<li><a href="#">photo galleries</a></li>
 					<li><a href="#">videos</a></li>
 					<li><a href="#">all categories</a></li>
